--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ img{
 
 .portofolio{
     color:white;
-    background-image: 
-    url(marius-boettcher-slider-01.png),
+    background-image:
+    url(marius-boettcher-slider-01.PNG),
     linear-gradient(to top right,#6E3988, #21062E);
     background-position: center;
 }
@@ -156,7 +156,7 @@ nav{
         text-align: center;
         grid-row: 2/3;
         grid-column: 1/2;
-    
+
     }
 }
 
