--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ img{
 .portofolio{
     color:white;
     background-image:
-    url(marius-boettcher-slider-01.PNG),
+    url(marius-boettcher-slider-01.png),
     linear-gradient(to top right,#6E3988, #21062E);
     background-position: center;
 }
